testdata/parser/negative/25.txt
Parse error at 25.pdl:7:20: Declared variable clash
		synchronous (int x) { // illegal
		                 ^
